tests/pass/fun1.tiger
let
	function f () =
		print (0)
in
end
