tests/fail/semantic/function-multiple-args-with-same-name.tiger
let
	function f(x : int, x : int) = 1
in
end
